--- a/superhot/index.html
+++ b/superhot/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);">
-        <canvas class="emscripten" oncontextmenu="event.preventDefault()" id="#canvas" width="335" height="667" style="width: 100%; height: 100%; cursor: default;"></canvas><div class="logo Dark" style="display: none;"></div><div class="progress Dark" style="display: none;"><div class="empty" style="width: 0%;"></div><div class="full" style="width: 100%;"></div></div></div>
+        <canvas class="emscripten" oncontextmenu="event.preventDefault()" id="canvas" width="335" height="667" style="width: 100%; height: 100%; cursor: default;"></canvas><div class="logo Dark" style="display: none;"></div><div class="progress Dark" style="display: none;"><div class="empty" style="width: 0%;"></div><div class="full" style="width: 100%;"></div></div></div>
         
    
     <script type="text/javascript">
