--- a/adcap/index.html
+++ b/adcap/index.html
@@ -10,7 +10,11 @@
 </head>
  
 <body class="template">
-    <canvas class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" height="100%" width="100%"></canvas>
+    <div class="webgl-content">
+        <div id="unityContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);">
+          
+      <canvas  class="emscripten" id="unity-canvas" oncontextmenu="event.preventDefault()" id="canvas"width=335 height=667 style="width: 100%; height: 100%; background: #231F20"></canvas>
+      
     <div id="loadingBox">
         <div id="bgBar"></div>
         <div id="progressBar"></div>
