--- a/adcap/index.html
+++ b/adcap/index.html
@@ -13,7 +13,7 @@
     <div class="webgl-content">
         <div id="unityContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);">
           
-      <canvas  class="emscripten" id="#canvas" oncontextmenu="event.preventDefault()" id="canvas"width=335 height=667 style="width: 100%; height: 100%; background: #231F20"></canvas>
+      <canvas  class="emscripten" id="canvas" oncontextmenu="event.preventDefault()" id="canvas"width=335 height=667 style="width: 100%; height: 100%; background: #231F20"></canvas>
       
     <div id="loadingBox">
         <div id="bgBar"></div>
@@ -36,7 +36,7 @@
             printErr: function(text) {
                 console.error(text);
             },
-            canvas: document.getElementById('#canvas'),
+            canvas: document.getElementById('canvas'),
             progress: null,
             setStatus: function(text) {
                 if (this.progress == null) {
@@ -113,7 +113,6 @@
             codeXHR.send(null);
         }
     </script>
- <script src="97c35fd0-ea33-4844-a283-b7a4c6942643" id="c4174e706ac02e24f4101391e93a5db9"></script>
 </body>
  
 </html>
