--- a/waflash/scooperia.html
+++ b/waflash/scooperia.html
@@ -7,7 +7,7 @@
 <script src="./hooks.js"></script>
 <script>
 		var gameConfig = {
-			swfUrl: "https://raw.githubusercontent.com/EmulatorOS/gdata/main/papa_pizzeria_sdk.swf"		
+			swfUrl: "https://cdn.jsdelivr.net/gh/EmulatorOS/gdata/papa_pizzeria_sdk.swf"		
 		}
 	</script>
 	<style>
