--- a/away-player-embed/example/donuteria.html
+++ b/away-player-embed/example/donuteria.html
@@ -77,7 +77,7 @@
     <div id = 'root'>
         <awayfl-player id = 'flashBlock'
             runtimebaseurl = '../dist/'
-            src = 'https://cdn.jsdelivr.net/gh/EmulatorOS/gdata/papasdonuteria_102.swf'
+            src = '../papasdonuteria_102.swf'
             onprogress = 'onProgress'
             onload = 'onLoad'
 
