--- a/run3/index.html
+++ b/run3/index.html
@@ -27,7 +27,7 @@
 		#openfl-content { background: #000000; width: 100%; height: 100%; }
 		@font-face {
 			font-family: 'Comfortaa Bold';
-			src: url('font/COMFORTAA-BOLD.eot?') format('embedded-opentype'),
+			src: url('font/COMFORTAA-BOLD.eot') format('embedded-opentype'),
 			url('font/COMFORTAA-BOLD.woff') format('woff'),
 			url('font/COMFORTAA-BOLD.TTF') format('truetype'),
 			url('font/COMFORTAA-BOLD.svg') format('svg');
