--- a/tetris/index.html
+++ b/tetris/index.html
@@ -27,6 +27,7 @@
     <script src="Game_Logic.js"></script>
     <script src="Button.js"></script>
     <script src="tetris.js"></script>
+	<script src="ScoreSaver.js"></script>
 
 
     <script>
