--- a/drift/index.html
+++ b/drift/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div class="webgl-content">
-      <div id="gameContainer" style="width: 960px; height: 600px"></div>
+      <div id="gameContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative;"></div>
       
     </div>
   </body>
