--- a/tunnelrush/index.html
+++ b/tunnelrush/index.html
@@ -5,6 +5,9 @@
     <title>Tunnel Rush</title>
     <link rel="shortcut icon" href="style/favicon.ico">
     <link rel="stylesheet" href="style/style.css">
+    <script>
+        const getAdinDomain = 'placeholder'
+    </script>
 	<script src="UnityLoader.js"></script>
     <script src="UnityProgress.js"></script>
     <script>
