--- a/black&white/index.html
+++ b/black&white/index.html
@@ -10,7 +10,7 @@
     <script src="Build/UnityLoader.js"></script>
     <script src="Build/CustomMethod.js"></script>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/BLACK & WHITE TO SEND.json", {onProgress: UnityProgress});
+      var gameInstance = UnityLoader.instantiate("gameContainer", "Build/black.json", {onProgress: UnityProgress});
     </script>
   
           <style type="text/css">
