update taco mia

--- a/tacomia/index.html
+++ b/tacomia/index.html
@@ -8,7 +8,7 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="#382C2A">
 	<meta name="viewport"
 		content="height=device-height, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui" />
-	<title>Papa Freezeria</title>
+	<title>Papa Taco Mia</title>
 
 	<script src="poki-sdk.js"></script>
 	<script type="text/javascript" src="./js/loader.js"></script>
@@ -43,7 +43,7 @@
 			background-size: contain;
 			background-position: center;
 			background-repeat: no-repeat;
-			background-image: url("assets/todo.jpg");
+			background-image: url("assets/papa_taco_mia_splashscreen.jpg");
 			visibility: visible;
 			transition: all 0.5s;
 			z-index: 10;
@@ -90,14 +90,14 @@
 
 			
 config = {
-    "key": "papa_pizzeria",
-    "title": "Papa Pizzeria",
-    "filename": "papa_pizzeria_sdk",
+    "key": "papa_tacomia",
+    "title": "Papa Taco Mia",
+    "filename": "papa_taco_mia_sdk",
+    "splash": "assets/papa_taco_mia_splashscreen.jpg",
     "pokiSDK": true,
     "debugPoki": false,
     "showFPS": false,
     "debug": false,
-    "splash": "assets/todo.jpg",
     "start": null,
     "width": 500,
     "height": 374,
@@ -114,7 +114,7 @@ config = {
         "line": "#a24f17",
         "rect": [
             0.1,
-            0.7,
+            0.85,
             0.8,
             0.025
         ]
@@ -125,7 +125,7 @@ config = {
     "retryButtonAction": null,
     "actionOnStop": null,
     "actionWhenRetryButtonEncountered": null,
-    "filenameNoSdk": "papa_pizzeria",
+    "filenameNoSdk": "papa_taco_mia",
     "binary": [
         {
             "name": "fonts.swf",
@@ -133,9 +133,9 @@ config = {
             "size": 30506
         },
         {
-            "name": "papa_pizzeria_sdk",
-            "path": "assets/papa_pizzeria_sdk.swf",
-            "size": 3159863,
+            "name": "papa_taco_mia_sdk",
+            "path": "assets/papa_taco_mia_sdk.swf",
+            "size": 6016376,
             "resourceType": "GAME"
         }
     ],
