--- a/getaway-shootout/index.html
+++ b/getaway-shootout/index.html
@@ -7,16 +7,17 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Getaway Shootout | 3kh0</title>
     <script src="Build/UnityLoader.js"></script>
+    <link rel="stylesheet" href="style.css">
     <style>
       body {
         background-color: #000000;
       }
     </style>
     <script>
-      var gameInstance = UnityLoader.instantiate("gameContainer", "GetawayShootout.json", { width: 800, height: 600 });
+      var gameInstance = UnityLoader.instantiate("gameContainer", "GetawayShootout.json");
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 100%; height: 100%; margin: auto;"></div>
+    <div id="gameContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);"></div>
   </body>
 </html>
