--- a/getaway-shootout/index.html
+++ b/getaway-shootout/index.html
@@ -18,6 +18,6 @@
     </script>
   </head>
   <body>
-    <div id="gameContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative; background: rgb(35, 31, 32);"></div>
+    <div id="gameContainer" style="width: 960px; height: 600px; padding: 0px; margin: 0px; border: 0px; position: relative;"></div>
   </body>
 </html>
