--- a/snake/index.html
+++ b/snake/index.html
@@ -6,7 +6,7 @@
 <link rel="apple-touch-icon" sizes="128x128" href="icons/128.png">
 <link rel="apple-touch-icon" sizes="256x256" href="icons/256.png">
 <title>Google Snake</title>
-<link rel="manifest" href="appmanifest.json">
+<link rel="manifest" href="manifest.json">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-SX3SJWCLEY"></script>
 <script>
     window.dataLayer = window.dataLayer || [];
